# rl-scaling-laws

./: .gitignore
DataDecide/: .gitattributes  .gitignore  README.md
DataDecide/eval/: eval_checkpoints_x_tasks.py  get_checkpoint_lists.ipynb  readme.md
DataDecide/pretraining/: create_ladder_over_scale_script.py  readme.md
DataDecide/release/: final_checkpoint_upload_script.sh  find_wandb.py  loss_curves.ipynb  make_final_checkpoint_script.py  make_model_table.ipynb  make_repo_public.py  model_card.md  readme.md  upload_checkpoints.py  upload_eval.py  upload_model.py  upload_model_card.py
DataDecide/results/: examine_results.ipynb  readme.md
DataDecide/scaling_laws/: README.md  fit_scaling_laws.py  render_tables.py
DataDecide/scaling_laws/dump/: ladder_ian.py  ladder_tables.py
DataDecide/scaling_laws/notebooks/: example_results.ipynb  math_and_code.ipynb  reconcile_bpb.ipynb  scaling_law_figures.ipynb  (+1 more)
DataDecide/single_scale/: config.yaml  create_per_task_configs.sh  data_exploration_and_cleaning.ipynb  data_method.py  evaluator.py  main.py  process_s3_to_csv.py  readme.md  target_filter.py  utils.py  visualization.py
DataDecide/utils/: constants.py  undo_normalization.py
DataDecide/viz/: compute_story_viz.ipynb  math_and_code.ipynb  pred_error.ipynb  readme.md  rq_4.ipynb  table_gen.ipynb
eval-code-Qwen2.5-Math/: main.py  pyproject.toml  set_redirects.sh
eval-code-Qwen2.5-Math/evaluation/: README.md  math_eval.py
eval-code-Qwen2.5-Math/evaluation/sh/kaitlyn/: eval_datadecide.sh  eval_datadecide_debug.sh  run_eval_datadecide.sh
(+15 files in other folders)
